# LeadsForge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pytest.ini  requirements.txt  ruff.toml
backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: main.py  version.py
backend/app/api/v1/: about_router.py  health_router.py  leads_detail_router.py  metrics_router.py  query_router.py  ranking_router.py  routing_router.py  subscription_router.py  task_router.py
backend/app/core/: config.py  settings.py
backend/app/db/: base.py  engine.py  session.py  sync_reflection.py
backend/app/enrichment/: base.py
backend/app/enrichment/providers/: domain_provider.py  email_quality_provider.py
backend/app/ingestion/: models.py  normalizers.py  pipeline.py  tasks.py  validators.py
backend/app/ingestion/sources/: csv_source.py  manual_source.py
backend/app/models/: lead.py  metric.py  subscription.py  task.py
backend/app/repositories/: lead_repository.py
backend/app/routers/: enrichment.py  health.py  ingestion.py  leads.py  scoring.py
backend/app/schemas/: lead.py  lead_pipeline.py
backend/app/scoring/: engine.py  rules.py
backend/app/services/: enrichment_service.py  ingestion_service.py  lead_service.py  scoring_service.py
backend/app/services/ai/: __init__.py  ai_router.py  base.py  embedding_pipeline.py  hybrid_search.py  insight_pipeline.py  openai_provider.py  semantic_search.py  summary_pipeline.py
backend/app/services/events/: activity.py
backend/app/services/health/: service.py
backend/app/services/metrics/: __init__.py  service.py
backend/app/services/query/: __init__.py  (+2 more)
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_leads_table.py  0002_create_lead_activity_log.py  0003_add_lead_status_enum.py  0004_create_lead_assignment.py  0005_create_lead_tags_and_link.py  0006_create_lead_pipeline_stages.py  0007_create_lead_reminders.py  0008_create_lead_attachments.py  0009_create_lead_email_log.py  0010_create_lead_webhook_events.py  0011_create_lead_score.py  0012_create_lead_score_history.py  0013_create_lead_notes.py  0014_create_lead_audit_log.py  0015_create_lead_merge_history.py  0016_create_lead_source.py  0017_create_lead_campaign_attribution.py  0018_create_lead_activity_timeline.py  0019_create_activity_timeline_triggers.py  0020_create_lead_assignment.py  0021_create_lead_assignment_history.py  0022_create_lead_reminder.py  0023_create_lead_reminder_snooze.py  0024_create_lead_email_log.py  0025_create_lead_tag_tables.py  0026_create_lead_webhook_event.py  0027_create_lead_score.py  0028_create_lead_score_history.py  0029_create_lead_audit_log.py  0030_create_lead_merge_history.py  0031_create_lead_note.py  0032_create_lead_status_change.py  0033_create_lead_pipeline_stage.py  0034_create_lead_pipeline_stage_link.py  0035_create_lead_attachment.py  0036_create_lead_attachment_version.py  0037_create_lead_call_log.py  0038_create_lead_sms_log.py  0039_create_lead_meeting_log.py  0040_create_lead_reminder.py  (+23 more)
backend/tests/: test_enrichment.py  test_health.py  test_ingestion_pipeline.py  test_leads.py  test_scoring.py
(+101 files in other folders)
