[project]
name = "leadsforge-backend"
version = "0.0.1"
description = "LeadsForge backend skeleton"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
]

[tool.poetry]
name = "leadsforge-backend"
version = "0.0.1"
description = "LeadsForge backend skeleton"
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "==3.12.8"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["ANN", "C90"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"