[tool.poetry]
name = "leadsforge-backend"
version = "0.0.1"
description = "LeadsForge backend skeleton"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "==3.12.8"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = "*"
email-validator = "*"
pydantic-settings = "*"
python-dotenv = "*"
httpx = "*"
sqlalchemy = "*"
asyncpg = "*"
aiosqlite = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-anyio = "*"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["ANN", "C90"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"