[tool.poetry]
name = "leadsforge-backend"
version = "0.0.1"
description = "LeadsForge backend skeleton"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "==3.12.8"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = { version = "*", extras = ["email"] }
pydantic-settings = "*"
python-dotenv = "*"
httpx = "*"
sqlalchemy = "*"
asyncpg = "*"
aiosqlite = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-anyio = "*"
ruff = "*"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["ANN", "C90"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
namespace_packages = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "uvicorn.*",
    "httpx.*",
    "asyncpg.*",
    "aiosqlite.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"